<?xml version="1.0" encoding="utf-8"?>
<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2012, 2013 Vlad Mihalachi
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:defaultValue=""
            android:key="tag"
            android:title="Tag"/>
    <EditTextPreference
            android:defaultValue=""
            android:inputType="textNoSuggestions"
            android:key="host"
            android:title="@string/host"/>
    <EditTextPreference
            android:defaultValue=""
            android:inputType="number"
            android:key="port"
            android:title="@string/porta"/>
    <EditTextPreference
            android:defaultValue=""
            android:inputType="textNoSuggestions"
            android:key="username"
            android:title="@string/nome_utente"/>
    <EditTextPreference
            android:defaultValue=""
            android:inputType="textPassword"
            android:key="password"
            android:summary="@string/password_criptata"
            android:title="@string/password"/>

    <ListPreference
            android:defaultValue="FTP"
            android:entries="@array/protocoli"
            android:entryValues="@array/protocoli"
            android:key="protocolo"
            android:title="@string/tipo_protocollo"/>
    <ListPreference
            android:defaultValue="@string/passiva"
            android:entries="@array/tipo_connessione"
            android:entryValues="@array/tipo_connessione"
            android:key="tipo_connessione"
            android:title="@string/tipo_connessione"/>

    <EditTextPreference
            android:defaultValue=""
            android:inputType="textNoSuggestions"
            android:key="root"
            android:title="@string/root"/>

</PreferenceScreen>