<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2012, 2013 Vlad Mihalachi
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
  ~ Copyright (c) 2013 Vlad Mihalachi.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:defaultValue="18"
            android:inputType="number"
            android:key="altezza_testo_editor"
            android:title="@string/altezza_testo"/>

    <EditTextPreference
            android:defaultValue="UTF-8"
            android:key="codifica"
            android:title="@string/codifica"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="testo_acapo"
            android:title="@string/testo_acapo"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="line_numbering"
            android:title="@string/line_numbering"
            android:summary="@string/beta_function"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="syntax highlight"
            android:title="@string/syntax_highlight"
            android:enabled="false"
            android:summary="@string/beta_function"/>

</PreferenceScreen>