<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2012, 2013 Vlad Mihalachi
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
  ~ Copyright (c) 2013 Vlad Mihalachi.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
            android:defaultValue=""
            android:key="cartella_download"
            android:title="@string/cartella_download"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="riscrivi_file_download"
            android:title="@string/sovrascrivi_file_locali"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="hiddenfiles_local"
            android:title="@string/mostra_file_nascosti_locali"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="hiddenfiles_remote"
            android:title="@string/mostra_file_nascosti_remoti"/>

    <CheckBoxPreference
            android:defaultValue="true"
            android:key="bug_report"
            android:title="@string/invia_rapporti"/>

</PreferenceScreen>