<?xml version="1.0" encoding="utf-8"?>

<!--~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  ~ Copyright (c) 2012, 2013 Vlad Mihalachi
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~-->

<!--
  ~ Copyright (c) 2013 Vlad Mihalachi.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
            android:defaultValue="0"
            android:entries="@array/tema_app"
            android:entryValues="@array/tema_app_values"
            android:key="tema_app"
            android:summary="@string/riavva_per_tema"
            android:title="@string/tema_app"/>
    <ListPreference
            android:defaultValue="0"
            android:entries="@array/tipi_liste"
            android:entryValues="@array/tipi_liste_values"
            android:key="tipo_lista"
            android:title="@string/tipo_di_lista"/>
    <ListPreference
            android:defaultValue="0"
            android:entries="@array/protocollo_principale"
            android:entryValues="@array/protocollo_principale_values"
            android:key="protocollo_principale"
            android:title="@string/protocollo_principale"/>

    <CheckBoxPreference
            android:defaultValue="false"
            android:key="splitActionBar"
            android:title="@string/ab_inbasso"/>
</PreferenceScreen>